--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,10 @@
 asgiref==3.6.0
+autopep8==2.0.2
+dj-rest-auth==3.0.0
 Django==4.1.7
 djangorestframework==3.14.0
+Pillow==9.4.0
+pycodestyle==2.10.0
 python-decouple==3.8
 pytz==2022.7.1
 sqlparse==0.4.3
